fix: enhance carousel slides container styles for better responsiveness on smaller screens

--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -162,7 +162,12 @@ padding-top: 100px;
 
 @media (width < 768px) {
   .carousel .carousel-slides-container {
-    max-width: 100%;
-    max-height: 100%;
+    position: relative;
+    margin: 0 auto;
+    padding: 0 24px;
+    max-width: 100vw;
+    max-height: 100vh;
+    overflow: hidden;
   }
+  
 }
